--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Hall of fame & bounty - (Hidden)
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://www.exploit-db.com/google-hacking-database?author=11201" target="_blank" >Exploit-DB 80+ Dorks</a>
+                        </li>
                         
                     </ul>
                 </div>
