--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>-->
-                    <p class="lead mb-5">I am s Thakur (57hakur) ethical hacker , bug hunter & founder of team <a href="https://www.facebook.com/sthakurhacker" target="_blank" >indian cyber soldiers</a>. </p>
+                    <p class="lead mb-5">I am s Thakur (57hakur) ethical hacker , bug hunter </p>
                     <div class="social-icons">
                      <!--  <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
                         <a class="social-icon" href="https://github.com/sthakurindia"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/sthakurhacker"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/sthakurhacker"><i class="fab fa-facebook-f"></i></a>
+                        
                     </div>
                 </div>
             </section>
